// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Controlled 1`] = `
<fieldset aria-labelledby="<removed>">
  <legend
    data-weight="medium"
    id="<removed>"
  >
    Utdanningsnivå
  </legend>
  <p
    data-variant="default"
    id="<removed>"
  >
    Velg det høyeste utdanningsnivået du har fullført.
  </p>
  <ds-field data-clickdelegatefor="<removed>">
    <input
      id="<removed>"
      name="_r_7_"
      type="radio"
      value="kindergarten"
    >
    <label
      data-weight="regular"
      for="<removed>"
    >
      Barnehage
    </label>
  </ds-field>
  <ds-field data-clickdelegatefor="<removed>">
    <input
      id="<removed>"
      name="_r_7_"
      type="radio"
      value="primary"
    >
    <label
      data-weight="regular"
      for="<removed>"
    >
      Grunnskole
    </label>
  </ds-field>
  <ds-field data-clickdelegatefor="<removed>">
    <input
      id="<removed>"
      name="_r_7_"
      type="radio"
      value="secondary"
    >
    <label
      data-weight="regular"
      for="<removed>"
    >
      Videregående
    </label>
  </ds-field>
  <ds-field data-clickdelegatefor="<removed>">
    <input
      id="<removed>"
      name="_r_7_"
      type="radio"
      value="higher"
    >
    <label
      data-weight="regular"
      for="<removed>"
    >
      Høyere utdanning
    </label>
  </ds-field>
</fieldset>
<hr
  aria-hidden="true"
  style="margin-top: var(--ds-size-4);"
>
<p
  data-variant="default"
  style="margin-block: var(--ds-size-2);"
>
  Du har valgt:
</p>
<div
  data-size="sm"
  style="display: flex; gap: 1rem;"
>
  <button
    data-variant="secondary"
    type="button"
  >
    Velg Barnehage
  </button>
  <button
    data-variant="secondary"
    type="button"
  >
    Velg Grunnskole
  </button>
</div>
`;

exports[`Default 1`] = `
<fieldset aria-labelledby="<removed>">
  <legend
    data-weight="medium"
    id="<removed>"
  >
    Velg din aldersgruppe.
  </legend>
  <ds-field data-clickdelegatefor="<removed>">
    <input
      id="<removed>"
      name="my-group"
      type="radio"
      value="10-20"
    >
    <label
      data-weight="regular"
      for="<removed>"
    >
      10-20 år
    </label>
  </ds-field>
  <ds-field data-clickdelegatefor="<removed>">
    <input
      id="<removed>"
      name="my-group"
      type="radio"
      value="21-45"
    >
    <label
      data-weight="regular"
      for="<removed>"
    >
      21-45 år
    </label>
  </ds-field>
  <ds-field data-clickdelegatefor="<removed>">
    <input
      id="<removed>"
      name="my-group"
      type="radio"
      value="46-80"
    >
    <label
      data-weight="regular"
      for="<removed>"
    >
      46-80 år
    </label>
  </ds-field>
  <p
    data-field="validation"
    hidden
    id="<removed>"
  >
  </p>
</fieldset>
`;

exports[`Disabled 1`] = `
<fieldset aria-labelledby="<removed>">
  <legend
    data-weight="medium"
    id="<removed>"
  >
    Velg din aldersgruppe.
  </legend>
  <p
    data-variant="default"
    id="<removed>"
  >
    Informasjonen blir brukt til å tilpasse innholdet på siden.
  </p>
  <ds-field data-clickdelegatefor="<removed>">
    <input
      disabled
      id="<removed>"
      name="my-disabled"
      type="radio"
      value="10-20"
    >
    <label
      data-weight="regular"
      for="<removed>"
    >
      10-20 år
    </label>
  </ds-field>
  <ds-field data-clickdelegatefor="<removed>">
    <input
      disabled
      id="<removed>"
      name="my-disabled"
      type="radio"
      value="21-45"
    >
    <label
      data-weight="regular"
      for="<removed>"
    >
      21-45 år
    </label>
  </ds-field>
  <ds-field data-clickdelegatefor="<removed>">
    <input
      disabled
      id="<removed>"
      name="my-disabled"
      type="radio"
      value="46-80"
    >
    <label
      data-weight="regular"
      for="<removed>"
    >
      46-80 år
    </label>
  </ds-field>
  <p
    data-field="validation"
    hidden
    id="<removed>"
  >
  </p>
</fieldset>
`;

exports[`Group 1`] = `
<fieldset aria-labelledby="<removed>">
  <legend
    data-weight="medium"
    id="<removed>"
  >
    Velg din aldersgruppe.
  </legend>
  <p
    data-variant="default"
    id="<removed>"
  >
    Informasjonen blir brukt til å tilpasse innholdet på siden.
  </p>
  <ds-field data-clickdelegatefor="<removed>">
    <input
      id="<removed>"
      name="my-group"
      type="radio"
      value="10-20"
    >
    <label
      data-weight="regular"
      for="<removed>"
    >
      10-20 år
    </label>
  </ds-field>
  <ds-field data-clickdelegatefor="<removed>">
    <input
      id="<removed>"
      name="my-group"
      type="radio"
      value="21-45"
    >
    <label
      data-weight="regular"
      for="<removed>"
    >
      21-45 år
    </label>
  </ds-field>
  <ds-field data-clickdelegatefor="<removed>">
    <input
      id="<removed>"
      name="my-group"
      type="radio"
      value="46-80"
    >
    <label
      data-weight="regular"
      for="<removed>"
    >
      46-80 år
    </label>
  </ds-field>
  <p
    data-field="validation"
    hidden
    id="<removed>"
  >
  </p>
</fieldset>
`;

exports[`Read Only 1`] = `
<fieldset aria-labelledby="<removed>">
  <legend
    data-weight="medium"
    id="<removed>"
  >
    Velg din aldersgruppe.
  </legend>
  <p
    data-variant="default"
    id="<removed>"
  >
    Informasjonen blir brukt til å tilpasse innholdet på siden.
  </p>
  <ds-field data-clickdelegatefor="<removed>">
    <input
      id="<removed>"
      name="my-readonly"
      readonly
      type="radio"
      value="10-20"
    >
    <label
      data-weight="regular"
      for="<removed>"
    >
      10-20 år
    </label>
  </ds-field>
  <ds-field data-clickdelegatefor="<removed>">
    <input
      id="<removed>"
      name="my-readonly"
      readonly
      type="radio"
      value="21-45"
    >
    <label
      data-weight="regular"
      for="<removed>"
    >
      21-45 år
    </label>
  </ds-field>
  <ds-field data-clickdelegatefor="<removed>">
    <input
      id="<removed>"
      name="my-readonly"
      readonly
      type="radio"
      value="46-80"
    >
    <label
      data-weight="regular"
      for="<removed>"
    >
      46-80 år
    </label>
  </ds-field>
  <p
    data-field="validation"
    hidden
    id="<removed>"
  >
  </p>
</fieldset>
`;

exports[`With Error 1`] = `
<fieldset aria-labelledby="<removed>">
  <legend
    data-weight="medium"
    id="<removed>"
  >
    Velg din aldersgruppe.
  </legend>
  <p
    data-variant="default"
    id="<removed>"
  >
    Informasjonen blir brukt til å tilpasse innholdet på siden.
  </p>
  <ds-field data-clickdelegatefor="<removed>">
    <input
      aria-describedby="<removed>"
      aria-invalid="true"
      id="<removed>"
      name="my-error"
      type="radio"
      value="10-20"
    >
    <label
      data-weight="regular"
      for="<removed>"
    >
      10-20 år
    </label>
  </ds-field>
  <ds-field data-clickdelegatefor="<removed>">
    <input
      aria-describedby="<removed>"
      aria-invalid="true"
      id="<removed>"
      name="my-error"
      type="radio"
      value="21-45"
    >
    <label
      data-weight="regular"
      for="<removed>"
    >
      21-45 år
    </label>
  </ds-field>
  <ds-field data-clickdelegatefor="<removed>">
    <input
      aria-describedby="<removed>"
      aria-invalid="true"
      id="<removed>"
      name="my-error"
      type="radio"
      value="46-80"
    >
    <label
      data-weight="regular"
      for="<removed>"
    >
      46-80 år
    </label>
  </ds-field>
  <p
    data-field="validation"
    id="<removed>"
  >
    Du må velge en aldersgruppe
  </p>
</fieldset>
`;
